# minesweeper-bevy

./: Cargo.toml  README.md
board_plugin/src/: lib.rs
board_plugin/src/components/: coordinates.rs  mod.rs
board_plugin/src/resources/: mod.rs  tile.rs  tile_map.rs
src/: main.rs
